--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -35,7 +35,6 @@ jobs:
           - 6379:6379
         options: --entrypoint redis-server
 
-
     steps:
       - name: 체크아웃
         uses: actions/checkout@v2
@@ -70,6 +69,7 @@ jobs:
           chmod +x ./gradlew
           ./gradlew clean build --warning-mode all
           ./gradlew openapi3 --warning-mode all
+          mv build/api-spec/auth.json ../swagger/
 
       - name: 빌드 및 API 명세서 생성 (Board)
         working-directory: ./board
@@ -78,6 +78,7 @@ jobs:
           chmod +x ./gradlew
           ./gradlew clean build --warning-mode all
           ./gradlew openapi3 --warning-mode all
+          mv build/api-spec/board.json ../swagger/
 
       - name: 빌드 및 API 명세서 생성 (Todo)
         working-directory: ./todo
@@ -86,12 +87,7 @@ jobs:
           chmod +x ./gradlew
           ./gradlew clean build --warning-mode all
           ./gradlew openapi3 --warning-mode all
-
-        shell: bash
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
+          mv build/api-spec/todo.json ../swagger/
 
       - name: Configure AWS credentials
         if: ${{ github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/main' }}
@@ -108,7 +104,16 @@ jobs:
           mkdir -p deploy-db
           cp docker-compose.yml deploy-db/
           cd ../ && mkdir -p deploy/db
-          mv ./infra_rds/deploy-db/* deploy/db 
+          mv ./infra_rds/deploy-db/* deploy/db
+
+      - name: 배포 Dir 생성(Swagger)
+        if: ${{ github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/main' }}
+        working-directory: ./swagger
+        run: |
+          mkdir -p deploy-swagger
+          cp * deploy-swagger/
+          cd ../ && mkdir -p deploy/swagger
+          mv ./swagger/deploy-swagger/* deploy/swagger
 
       - name: 배포 Dir 생성(Auth)
         if: ${{ github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/main' }}
@@ -118,7 +123,7 @@ jobs:
           cp build/libs/auth-*.jar deploy-auth/
           cp Dockerfile deploy-auth/
           cp docker-compose.yml deploy-auth/
-          cp build/api-spec/authAPI.json deploy-auth/
+          cp build/api-spec/auth.json deploy-auth/
           cd ../ && mkdir -p deploy/auth
           mv ./auth/deploy-auth/* deploy/auth
 
@@ -130,7 +135,7 @@ jobs:
           cp build/libs/board-*.jar deploy-board/
           cp Dockerfile deploy-board/
           cp docker-compose.yml deploy-board/
-          cp build/api-spec/boardAPI.json deploy-board/
+          cp build/api-spec/board.json deploy-board/
           cd ../ && mkdir -p deploy/board
           mv ./board/deploy-board/* deploy/board 
 
@@ -142,7 +147,7 @@ jobs:
           cp build/libs/todo-*.jar deploy-todo/
           cp Dockerfile deploy-todo/
           cp docker-compose.yml deploy-todo/
-          cp build/api-spec/todoAPI.json deploy-todo/
+          cp build/api-spec/todo.json deploy-todo/
           cd ../ && mkdir -p deploy/todo
           mv ./todo/deploy-todo/* deploy/todo 
 
