--- a/todo/build.gradle
+++ b/todo/build.gradle
@@ -15,11 +15,17 @@ openapi3 {
 	description = "Harp Sharp Todo List와 관련된 API입니다."
 	version = "1.0.0"
 	format = 'json'
-	outputFileNamePrefix = 'todoAPI'
+	outputFileNamePrefix = 'todo'
 }
 
 dependencies {
+	implementation	   project(':auth')
 	implementation 	   project(':infra_rds')
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+	testImplementation "com.epages:restdocs-api-spec-mockmvc:${restdocsApiSpecVersion}"
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
 
 bootJar {
