fix: board/todo swagger 구분자 변경

--- a/todo/build.gradle
+++ b/todo/build.gradle
@@ -8,11 +8,10 @@ plugins {
 
 openapi3 {
 	servers = [
-			{ url = "http://swagger-todo" },
-			{ url = "http://harpsharp.com/swagger/todo" }
+			{ url = "http://harpsharp.com" }
 	]
 	title = "Harp Sharp Todo API"
-	description = "Harp Sharp Todo List와 관련된 API입니다."
+	description = "Harp Sharp Todo List API입니다."
 	version = "1.0.0"
 	format = 'json'
 	outputFileNamePrefix = 'todo'
