add: todo, swagger proxy_pass 추가

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -26,6 +26,10 @@ upstream gpt {
     server gpt4o:5001;
 }
 
+upstream swagger {
+    server swagger:8080;
+}
+
 
 server {
        listen  443 ssl;
@@ -107,10 +111,30 @@ server {
             include /etc/nginx/conf.d/header.conf;
        }
 
+       location = /todo {
+            proxy_pass http://todo;
+            include /etc/nginx/conf.d/header.conf;
+       }
+
        location /todo/posts {
-            auth_request /verify;
+            if ($request_method = GET) {
+                rewrite ^ /internal$uri last;
+            }
 
             proxy_pass http://todo;
+            include /etc/nginx/conf.d/header.conf;
+       }
+
+       location /internal/todo/posts {
+            internal;
+            rewrite ^/internal(?<realuri>/.*)$ $realuri break;
+            proxy_pass http://todo;
+            include /etc/nginx/conf.d/header.conf;
+       }
+
+       loacation = /docs {
+            rewrite ^ /internal$uri break;
+            proxy_pass http://swagger;
             include /etc/nginx/conf.d/header.conf;
        }
 }
