add: todo, swagger proxy_pass 추가

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -133,7 +133,7 @@ server {
        }
 
        loacation = /docs {
-            rewrite ^ /internal$uri break;
+            rewrite ^/docs(?<realuri>/.*)$ $realuri break;
             proxy_pass http://swagger;
             include /etc/nginx/conf.d/header.conf;
        }
