add: 1.auth 응답 코드 && 테스트 코드 리팩토링 2. 작성글 조회 기능 추가 3. update/logout 버그 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -50,17 +50,17 @@ server {
        # API 엔드포인트 설정
        location = /login {
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://auth/login;
+            proxy_pass http://auth;
        }
 
        location = /logout {
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://auth/logout;
+            proxy_pass http://auth;
        }
 
        location = /join {
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://auth/join;
+            proxy_pass http://auth;
        }
 
        location /user {
@@ -69,12 +69,12 @@ server {
             }
 
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://auth/user;
+            proxy_pass http://auth;
        }
 
        location = /reissue {
+            proxy_pass http://auth;
             include /etc/nginx/conf.d/header.conf;
-            proxy_pass http://auth/reissue;
        }
 
        location /gpt {
