add: todo/posts auth_request 추가

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -121,6 +121,7 @@ server {
                 rewrite ^ /internal$uri last;
             }
 
+            auth_request /verify;
             proxy_pass http://todo;
             include /etc/nginx/conf.d/header.conf;
        }
