refactor: post/todo api 경로 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -133,7 +133,7 @@ server {
             include /etc/nginx/conf.d/header.conf;
        }
 
-       loacation = /docs {
+       location /docs {
             rewrite ^/docs(?<realuri>/.*)$ $realuri break;
             proxy_pass http://swagger;
             include /etc/nginx/conf.d/header.conf;
