--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -138,4 +138,12 @@ server {
             proxy_pass http://swagger;
             include /etc/nginx/conf.d/header.conf;
        }
+
+       location ~ ^/(swagger|webjars|configuration|swagger-resources|v2|csrf) {
+             proxy_pass http://swagger;
+             proxy_set_header Host $host;
+             proxy_set_header X-Real-IP $remote_addr;
+             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+             proxy_set_header X-Forwarded-Proto $scheme;
+       }
 }
