fix: swagger uri 경로 설정 문제 해결

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -134,7 +134,7 @@ server {
        }
 
        location /docs {
-            rewrite ^/docs(?<realuri>/.*)$ $realuri break;
+            rewrite ^/docs(?<realuri>/.*)$ /$realuri break;
             proxy_pass http://swagger;
             include /etc/nginx/conf.d/header.conf;
        }
