fix: DB를 기존 네트워크와 분리, api 엔드포인트 서버와만 통신하도록 수정

--- a/auth/docker-compose.yml
+++ b/auth/docker-compose.yml
@@ -14,8 +14,11 @@ services:
       SPRING_PROFILES_ACTIVE: prod
     networks:
       - harpsharp
+      - datasource
 
 networks:
   harpsharp:
+    external: true
+  datasource:
     external: true
 
