--- a/board/docker-compose.yml
+++ b/board/docker-compose.yml
@@ -14,7 +14,10 @@ services:
       SPRING_PROFILES_ACTIVE: prod
     networks:
       - harpsharp
+      - datasource
 
 networks:
   harpsharp:
+    external: true
+  datasource:
     external: true
