add: comments 속성 추가, db network 설정 롤백

--- a/infra_rds/docker-compose.yml
+++ b/infra_rds/docker-compose.yml
@@ -23,8 +23,8 @@ services:
     expose:
       - "6379"
     networks:
-      - datasource
+      - harpsharp
 
 networks:
-  datasource:
+  harpsharp:
     external: true
