--- a/infra_rds/docker-compose.yml
+++ b/infra_rds/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     expose:
       - "3306"
     networks:
-      - datasource
+      - harpsharp
 
   redis:
     container_name: redis
