--- a/nginx/conf.d/header.conf
+++ b/nginx/conf.d/header.conf
@@ -6,6 +6,7 @@ proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header Accept "application/json;charset=UTF-8";
 proxy_set_header Authorization $http_authorization;
 proxy_http_version 1.1;
+proxy_set_header Cookie $http_cookie;
 add_header 'Access-Control-Allow-Credentials' 'true';
 add_header "Access-Control-Allow-Origin" "*";
 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept';
