chore: 테스트 코드 api 경로 업데이트

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -49,11 +49,13 @@ server {
 
        # API 엔드포인트 설정
        location = /api/v1/login {
+            rewrite ^/api/v1(?<realuri>/.*)$ $realuri break;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth;
        }
 
        location = /api/v1/logout {
+            rewrite ^/api/v1(?<realuri>/.*)$ $realuri break;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth;
        }
