--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: npm 빌드 (frontend)
         working-directory: ./frontend
-        run: npm run dev
+        run: npm run build
 
 #      - name: npm 테스트 (frontend)
 #        working-directory: ./frontend
