--- a/swagger/docker-compose.yml
+++ b/swagger/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     container_name: swagger
     volumes:
       - ./:/tmp
-    ports:
-      - "9000:8080"
+    expose:
+      - "8080"
     environment:
       - SWAGGER_JSON=/tmp/auth.json
     networks:
