fix: .next가 배포 파일에 추가되지 않던 문제 수정

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -64,6 +64,7 @@ jobs:
         run: | 
           npm run build
           mv .next next
+          mv .eslintrc.json eslintrc.json
 
 #      - name: npm 테스트 (frontend)
 #        working-directory: ./frontend
