test: 프론트 배포 테스트

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,67 +1,58 @@
-# Base image
-FROM node:18-alpine AS base
-
-# Install dependencies only when needed
-FROM base AS deps
+FROM node:18-alpine AS deps
 RUN apk add --no-cache libc6-compat
-WORKDIR /app
 
-RUN rm -rf node_modules
+# 명령어를 실행할 디렉터리 지정
+WORKDIR /usr/src/app
 
-# Copy lock files and package.json for dependency installation
-COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
+# Dependancy install을 위해 package.json, package-lock.json, yarn.lock 복사
+COPY package.json yarn.lock ./
 
-# Install dependencies based on the lock file present
-RUN \
-  if [ -f yarn.lock ]; then yarn install --frozen-lockfile; \
-  elif [ -f package-lock.json ]; then npm ci; \
-  elif [ -f pnpm-lock.yaml ]; then corepack enable pnpm && pnpm install --frozen-lockfile; \
-  else echo "Lockfile not found." && exit 1; \
-  fi
+# Dependancy 설치 (새로운 lock 파일 수정 또는 생성 방지)
+RUN yarn --frozen-lockfile
 
-# Rebuild the source code only when needed
-FROM base AS builder
-WORKDIR /app
+###########################################################
 
-# Copy node_modules and source code
-COPY --from=deps /app/node_modules ./node_modules
+# 2단계: next.js 빌드 단계
+FROM node:18-alpine AS builder
+
+# Docker를 build할때 개발 모드 구분용 환경 변수를 명시함
+ARG ENV_MODE
+
+# 명령어를 실행할 디렉터리 지정
+WORKDIR /usr/src/app
+
+# node_modules 등의 dependancy를 복사함.
+COPY --from=deps /usr/src/app/node_modules ./node_modules
 COPY . .
 
-# Disable Next.js telemetry during build
-ENV NEXT_TELEMETRY_DISABLED 1
+# 구축 환경에 따라 env 변수를 다르게 가져가야 하는 경우 환경 변수를 이용해서 env를 구분해준다.
+COPY .env.$ENV_MODE ./.env.production
+RUN yarn build
 
-# Build the project
-RUN \
-  if [ -f yarn.lock ]; then yarn build; \
-  elif [ -f package-lock.json ]; then npm run build; \
-  elif [ -f pnpm-lock.yaml ]; then corepack enable pnpm && pnpm run build; \
-  else echo "Lockfile not found." && exit 1; \
-  fi
+###########################################################
 
-# Production image
-FROM base AS runner
-WORKDIR /app
+# 3단계: next.js 실행 단계
+FROM node:18-alpine AS runner
 
-# Set environment variables
-ENV NODE_ENV production
-ENV NEXT_TELEMETRY_DISABLED 1
+# 명령어를 실행할 디렉터리 지정
+WORKDIR /usr/src/app
 
-# Create a non-root user and set permissions
-RUN addgroup --system --gid 1001 nodejs \
-  && adduser --system --uid 1001 nextjs \
-  && mkdir .next \
-  && chown nextjs:nodejs .next
+# container 환경에 시스템 사용자를 추가함
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
 
-# Copy the built application and required files
-COPY --from=builder /app/public ./public
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+# next.config.js에서 output을 standalone으로 설정하면
+# 빌드에 필요한 최소한의 파일만 ./next/standalone로 출력이 된다.
+# standalone 결과물에는 public 폴더와 static 폴더 내용은 포함되지 않으므로, 따로 복사를 해준다.
+COPY --from=builder /usr/src/app/public ./public
+COPY --from=builder --chown=nextjs:nodejs /usr/src/app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /usr/src/app/.next/static ./.next/static
 
-# Use the non-root user
-USER nextjs
-
-# Expose the application port
+# 컨테이너의 수신 대기 포트를 3000으로 설정
 EXPOSE 3000
 
-# Start the application
+# node로 애플리케이션 실행
 CMD ["node", "server.js"]
+
+# standalone으로 나온 결과값은 node 자체적으로만 실행 가능
+# CMD ["npm", "start"]
