--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,52 +1,39 @@
-FROM node:18-alpine AS deps
-RUN apk add --no-cache libc6-compat
+# Install dependencies only when needed
+FROM node:alpine AS deps
+RUN apk add --no-cache libc6-compat python3 build-base
+WORKDIR /app
+COPY package.json package-lock.json ./
+RUN npm ci
 
-# 명령어를 실행할 디렉터리 지정
-WORKDIR /usr/src/app
-
-# Dependancy install을 위해 package.json, package-lock.json, yarn.lock 복사
-COPY *.json ./
-
-###########################################################
-
-# 2단계: next.js 빌드 단계
-FROM node:18-alpine AS builder
-
-# 명령어를 실행할 디렉터리 지정
-WORKDIR /usr/src/app
-
-# node_modules 등의 dependancy를 복사함.
-COPY --from=deps /usr/src/app/node_modules ./node_modules
+# Rebuild the source code only when needed
+FROM node:alpine AS builder
+WORKDIR /app
 COPY . .
+COPY --from=deps /app/node_modules ./node_modules
+RUN npm run build
+RUN npm ci --production
+RUN rm -rf ./.next/cache
 
-# 구축 환경에 따라 env 변수를 다르게 가져가야 하는 경우 환경 변수를 이용해서 env를 구분해준다.
-COPY .env.local ./.env.local
-RUN yarn build
+# Production image, copy all the files and run next
+FROM node:alpine AS runner
+WORKDIR /app
 
-###########################################################
+ENV NODE_ENV=production
+ENV SHOULD_PROFILE=true
+ENV SHOULD_TRACE=true
 
-# 3단계: next.js 실행 단계
-FROM node:18-alpine AS runner
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S nextjs -u 1001
 
-# 명령어를 실행할 디렉터리 지정
-WORKDIR /usr/src/app
+COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder --chown=nextjs:nodejs /app/.next ./.next
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/next.config.js ./next.config.js
+COPY --from=builder /app/server-preload.js ./server-preload.js
 
-# container 환경에 시스템 사용자를 추가함
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
+USER nextjs
 
-# next.config.js에서 output을 standalone으로 설정하면
-# 빌드에 필요한 최소한의 파일만 ./next/standalone로 출력이 된다.
-# standalone 결과물에는 public 폴더와 static 폴더 내용은 포함되지 않으므로, 따로 복사를 해준다.
-COPY --from=builder /usr/src/app/public ./public
-COPY --from=builder --chown=nextjs:nodejs /usr/src/app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /usr/src/app/.next/static ./.next/static
-
-# 컨테이너의 수신 대기 포트를 3000으로 설정
 EXPOSE 3000
 
-# node로 애플리케이션 실행
-CMD ["node", "server.js"]
-
-# standalone으로 나온 결과값은 node 자체적으로만 실행 가능
-# CMD ["npm", "start"]
+CMD ["npm", "start"]
