test: 프론트 배포 테스트

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -18,7 +18,8 @@ RUN rm -rf ./.next/cache
 FROM node:alpine AS runner
 WORKDIR /app
 
-ENV NODE_ENV=production
+# Set environment variables for local environment
+ENV NODE_ENV=local
 ENV SHOULD_PROFILE=true
 ENV SHOULD_TRACE=true
 
