--- a/nginx/conf.d/header.conf
+++ b/nginx/conf.d/header.conf
@@ -7,7 +7,7 @@ proxy_set_header Accept "application/json;charset=UTF-8";
 proxy_set_header Authorization $http_authorization;
 proxy_http_version 1.1;
 proxy_set_header Cookie $http_cookie;
+add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
 add_header 'Access-Control-Allow-Credentials' 'true';
-add_header "Access-Control-Allow-Origin" "http://localhost:3000";
 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept';
 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH' always;
