--- a/nginx/conf.d/header.conf
+++ b/nginx/conf.d/header.conf
@@ -1,3 +1,15 @@
+if ($request_method = 'OPTIONS') {
+     add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+     add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
+     add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
+     add_header 'Access-Control-Allow-Credentials' 'true';
+     return 204;
+}
+
+add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
+add_header 'Access-Control-Allow-Credentials' 'true';
+add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept';
+add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH' always;
 proxy_set_header Host harpsharp.com;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header Upgrade $http_upgrade;
@@ -7,7 +19,3 @@ proxy_set_header Accept "application/json;charset=UTF-8";
 proxy_set_header Authorization $http_authorization;
 proxy_http_version 1.1;
 proxy_set_header Cookie $http_cookie;
-add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
-add_header 'Access-Control-Allow-Credentials' 'true';
-add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept';
-add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH' always;
