fix: nginx header 설정 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -50,17 +50,41 @@ server {
        # API 엔드포인트 설정
        location = /api/v1/login {
             rewrite ^/api/v1(?<realuri>/.*)$ $realuri break;
+            if ($request_method = 'OPTIONS') {
+                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
+                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
+                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 return 204;
+            }
+
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth;
        }
 
        location = /api/v1/logout {
             rewrite ^/api/v1(?<realuri>/.*)$ $realuri break;
+            if ($request_method = 'OPTIONS') {
+                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
+                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
+                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 return 204;
+            }
+
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth;
        }
 
        location = /api/v1/join {
+            if ($request_method = 'OPTIONS') {
+                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
+                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
+                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 return 204;
+            }
+
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth;
        }
@@ -69,6 +93,14 @@ server {
             limit_except GET POST PATCH DELETE {
                 deny all;
             }
+            if ($request_method = 'OPTIONS') {
+                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
+                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
+                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 return 204;
+            }
+
 
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth;
@@ -76,17 +108,41 @@ server {
 
        location /api/v1/gpt {
             rewrite ^/api/v1/gpt(?<realuri>/.*)$ $realuri break;
+            if ($request_method = 'OPTIONS') {
+                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
+                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
+                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 return 204;
+            }
+
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://gpt;
        }
 
        location = /api/v1/verify {
             internal;
+            if ($request_method = 'OPTIONS') {
+                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
+                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
+                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 return 204;
+            }
+
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth;
        }
 
        location = /api/v1/board {
+            if ($request_method = 'OPTIONS') {
+                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
+                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
+                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 return 204;
+            }
+
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://board;
        }
@@ -94,6 +150,14 @@ server {
        location /api/v1/board/posts {
             if ($request_method = GET) {
                 rewrite ^ /internal$uri last;
+            }
+
+            if ($request_method = 'OPTIONS') {
+                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
+                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
+                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 return 204;
             }
 
             auth_request /api/v1/verify;
@@ -104,11 +168,27 @@ server {
        location /internal/api/v1/board/posts {
             internal;
             rewrite ^/internal(?<realuri>/.*)$ $realuri break;
+            if ($request_method = 'OPTIONS') {
+                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
+                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
+                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 return 204;
+            }
+
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://board;
        }
 
        location = /api/v1/todo {
+            if ($request_method = 'OPTIONS') {
+                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
+                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
+                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 return 204;
+            }
+
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://todo;
        }
@@ -126,12 +206,21 @@ server {
        location /internal/api/v1/todo/posts {
             internal;
             rewrite ^/internal(?<realuri>/.*)$ $realuri break;
+            if ($request_method = 'OPTIONS') {
+                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
+                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
+                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 return 204;
+            }
+
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://todo;
        }
 
        location /docs {
             rewrite ^/docs(?<realuri>/.*)?$ $realuri break;
+
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://swagger;
        }
