--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -7,7 +7,10 @@ services:
       - harpsharp
     expose:
       - "3000"
-
+    env_file:
+      - ./.env.local  # 기본 환경 변수 파일
+    volumes:
+      - .:/app
 
 networks:
   harpsharp:
