--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -43,6 +43,13 @@ server {
        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
        location / {
+            if ($request_method = 'OPTIONS') {
+                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
+                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
+                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 return 204;
+            }
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://front;
        }
