--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - harpsharp
     expose:
       - "3000"
-    env_file:
-      - ./.env.local
+    environment:
+      - NEXT_PUBLIC_API_URL=https://harpsharp.com
 
 networks:
   harpsharp:
