fix: 프론트 설정 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -44,10 +44,7 @@ server {
 
        location / {
             if ($request_method = 'OPTIONS') {
-                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
-                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
-                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 include /etc/nginx/conf.d/header.conf;
                  return 204;
             }
             include /etc/nginx/conf.d/header.conf;
@@ -58,10 +55,7 @@ server {
        location = /api/v1/login {
             rewrite ^/api/v1(?<realuri>/.*)$ $realuri break;
             if ($request_method = 'OPTIONS') {
-                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
-                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
-                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 include /etc/nginx/conf.d/header.conf;
                  return 204;
             }
 
@@ -72,10 +66,7 @@ server {
        location = /api/v1/logout {
             rewrite ^/api/v1(?<realuri>/.*)$ $realuri break;
             if ($request_method = 'OPTIONS') {
-                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
-                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
-                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 include /etc/nginx/conf.d/header.conf;
                  return 204;
             }
 
@@ -85,10 +76,7 @@ server {
 
        location = /api/v1/join {
             if ($request_method = 'OPTIONS') {
-                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
-                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
-                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 include /etc/nginx/conf.d/header.conf;
                  return 204;
             }
 
@@ -101,10 +89,7 @@ server {
                 deny all;
             }
             if ($request_method = 'OPTIONS') {
-                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
-                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
-                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 include /etc/nginx/conf.d/header.conf;
                  return 204;
             }
 
@@ -116,10 +101,7 @@ server {
        location /api/v1/gpt {
             rewrite ^/api/v1/gpt(?<realuri>/.*)$ $realuri break;
             if ($request_method = 'OPTIONS') {
-                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
-                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
-                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 include /etc/nginx/conf.d/header.conf;
                  return 204;
             }
 
@@ -130,10 +112,7 @@ server {
        location = /api/v1/verify {
             internal;
             if ($request_method = 'OPTIONS') {
-                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
-                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
-                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 include /etc/nginx/conf.d/header.conf;
                  return 204;
             }
 
@@ -143,10 +122,7 @@ server {
 
        location = /api/v1/board {
             if ($request_method = 'OPTIONS') {
-                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
-                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
-                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 include /etc/nginx/conf.d/header.conf;
                  return 204;
             }
 
@@ -160,10 +136,7 @@ server {
             }
 
             if ($request_method = 'OPTIONS') {
-                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
-                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
-                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 include /etc/nginx/conf.d/header.conf;
                  return 204;
             }
 
@@ -176,10 +149,7 @@ server {
             internal;
             rewrite ^/internal(?<realuri>/.*)$ $realuri break;
             if ($request_method = 'OPTIONS') {
-                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
-                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
-                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 include /etc/nginx/conf.d/header.conf;
                  return 204;
             }
 
@@ -189,10 +159,7 @@ server {
 
        location = /api/v1/todo {
             if ($request_method = 'OPTIONS') {
-                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
-                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
-                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 include /etc/nginx/conf.d/header.conf;
                  return 204;
             }
 
@@ -205,6 +172,11 @@ server {
                 rewrite ^ /internal$uri last;
             }
 
+            if ($request_method = 'OPTIONS') {
+                  include /etc/nginx/conf.d/header.conf;
+                  return 204;
+            }
+
             auth_request /api/v1/verify;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://todo;
@@ -214,10 +186,7 @@ server {
             internal;
             rewrite ^/internal(?<realuri>/.*)$ $realuri break;
             if ($request_method = 'OPTIONS') {
-                 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
-                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Authorization';
-                 add_header 'Access-Control-Allow-Credentials' 'true';
+                 include /etc/nginx/conf.d/header.conf;
                  return 204;
             }
 
