--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -47,6 +47,8 @@ server {
                  include /etc/nginx/conf.d/header.conf;
                  return 204;
             }
+
+            include /etc/nginx/conf.d/proxy.conf;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://front;
        }
@@ -59,6 +61,7 @@ server {
                  return 204;
             }
 
+            include /etc/nginx/conf.d/proxy.conf;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth;
        }
@@ -70,6 +73,7 @@ server {
                  return 204;
             }
 
+            include /etc/nginx/conf.d/proxy.conf;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth;
        }
@@ -80,6 +84,7 @@ server {
                  return 204;
             }
 
+            include /etc/nginx/conf.d/proxy.conf;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth;
        }
@@ -94,6 +99,7 @@ server {
             }
 
 
+            include /etc/nginx/conf.d/proxy.conf;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth;
        }
@@ -105,6 +111,7 @@ server {
                  return 204;
             }
 
+            include /etc/nginx/conf.d/proxy.conf;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://gpt;
        }
@@ -116,6 +123,7 @@ server {
                  return 204;
             }
 
+            include /etc/nginx/conf.d/proxy.conf;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth;
        }
@@ -126,6 +134,7 @@ server {
                  return 204;
             }
 
+            include /etc/nginx/conf.d/proxy.conf;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://board;
        }
@@ -141,6 +150,8 @@ server {
             }
 
             auth_request /api/v1/verify;
+
+            include /etc/nginx/conf.d/proxy.conf;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://board;
        }
@@ -153,6 +164,8 @@ server {
                  return 204;
             }
 
+            include /etc/nginx/conf.d/proxy.conf;
+
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://board;
        }
@@ -163,6 +176,7 @@ server {
                  return 204;
             }
 
+            include /etc/nginx/conf.d/proxy.conf;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://todo;
        }
@@ -178,6 +192,7 @@ server {
             }
 
             auth_request /api/v1/verify;
+            include /etc/nginx/conf.d/proxy.conf;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://todo;
        }
@@ -190,13 +205,16 @@ server {
                  return 204;
             }
 
+            include /etc/nginx/conf.d/proxy.conf;
             include /etc/nginx/conf.d/header.conf;
+
             proxy_pass http://todo;
        }
 
        location /docs {
             rewrite ^/docs(?<realuri>/.*)?$ $realuri break;
 
+            include /etc/nginx/conf.d/proxy.conf;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://swagger;
        }
