--- a/nginx/conf.d/proxy.conf
+++ b/nginx/conf.d/proxy.conf
@@ -3,7 +3,7 @@ proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
 proxy_set_header X-Real-IP $remote_addr;
-proxy_set_header Accept "application/json";
+proxy_set_header Accept "application/json;charset=UTF-8";
 proxy_set_header Content-Type "application/json;charset=UTF-8";
 proxy_set_header Authorization $http_authorization;
 proxy_http_version 1.1;
