--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -67,18 +67,11 @@ server {
        location = /api/v1/logout {
             rewrite ^/api/v1(?<realuri>/.*)$ $realuri break;
             if ($request_method = 'OPTIONS') {
-                    add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
-                    add_header 'Access-Control-Allow-Credentials' 'true';
-                    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept';
-                    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH';
+                    include /etc/nginx/conf.d/header.conf;
                     return 204;
             }
 
-            # 모든 요청에 대해 CORS 헤더 추가
-            add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
-            add_header 'Access-Control-Allow-Credentials' 'true';
-            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH';
+            include /etc/nginx/conf.d/header.conf;
             include /etc/nginx/conf.d/proxy.conf;
             proxy_pass http://auth;
        }
@@ -110,6 +103,10 @@ server {
        }
 
        location /api/v1/reissue {
+            if ($request_method = 'OPTIONS') {
+                include /etc/nginx/conf.d/header.conf;
+                return 204;
+            }
             include /etc/nginx/conf.d/proxy.conf;
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://todo;
