--- a/nginx/conf.d/header.conf
+++ b/nginx/conf.d/header.conf
@@ -1,3 +1,15 @@
+proxy_set_header Host harpsharp.com;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+proxy_set_header Upgrade $http_upgrade;
+proxy_set_header Connection "upgrade";
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header Accept "application/json;charset=UTF-8";
+proxy_set_header Content-Type "application/json;charset=UTF-8";
+proxy_set_header Authorization $http_authorization;
+proxy_http_version 1.1;
+proxy_set_header Cookie $http_cookie;
+proxy_hide_header Access-Control-Allow-Origin;
+
 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
 add_header 'Access-Control-Allow-Credentials' 'true';
 add_header 'Access-Control-Allow-Headers' : 'Origin, Accept, X-Requested-With,Content-Type,Access-Control-Request-Method,Access-Control-Request-Headers,Authorization';
