--- a/nginx/conf.d/header.conf
+++ b/nginx/conf.d/header.conf
@@ -9,6 +9,7 @@ proxy_set_header Authorization $http_authorization;
 proxy_http_version 1.1;
 proxy_set_header Cookie $http_cookie;
 proxy_hide_header Access-Control-Allow-Origin;
+proxy_hide_header Access-Control-Allow-Credentials;
 
 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
 add_header 'Access-Control-Allow-Credentials' 'true';
